--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -55,5 +55,6 @@ spec:
           #!/bin/bash
           set -e
           python -m pip install --upgrade pip wheel
+          pwd && ls -la
           pip install -r requirements.txt
           nosetests $(params.args)
